--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.11",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -41,6 +42,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "tailwind-merge": "^2.2.1",
