--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lucide-react": "^0.343.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nookies": "^2.5.2",
     "pocketbase": "^0.21.1",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
@@ -45,6 +46,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
